# wheeltec-building-inspection

./: .gitattributes  .gitignore  CMakeLists.txt  Important Notes.txt  README.md  package.xml  python-venv-setup.sh  requirements.txt  run_ros_launch.py  setup.py
UI/: CMakeLists.txt  package.xml  plugin.xml  requirements.txt
UI/resource/: building-inspec-control.ui  movement-control-display.ui  object-detection-display.ui  path-planner.ui  path-point-input.ui  recorder-window.ui  ros-parameters-display.ui  skeleton-tracking-display.ui
UI/robot_handler_startup/: start_robot_handler.launch
UI/scripts/: RobotHandler.py  building-inspec.py  cpp_monitor.cpp
UI/src/wheeltec-building-inspection/: building-inspec.py  follower.cpp  follower.sh  monitor.py  multi.py  (+5 more)
UI/ui-startup/: START_ROBOT_CONTROL.desktop  START_ROBOT_CONTROL_1.desktop  default.rviz  run_rqt_gui.sh  run_rqt_gui_1.sh
data_collection/: CMakeLists.txt  package.xml
data_collection/launch/: lidar_collection.launch  playback_data.launch
data_collection/launch/include/: start_collection.launch
data_collection/setup/: build_directories.sh
data_collection/src/: fuse_sensors_to_point_cloud.cpp
data_recordings/imu_recordings/: IMU-RECORDING.bag  IMU-RECORDING.txt
resource/: building-inspec-control.ui
robot_handler_startup/: robot_handler.service  run_start_robot_handler.sh  start_robot_handler.launch
scripts/: RobotHandler.py  building-inspec.py
src/wheeltec-building-inspection/: building-inspec.py
ui-startup/: START_ROBOT_CONTROL.desktop
utils/: Definitions.py  SubProcessManager.py
(+3 files in other folders)
