<?xml version="1.0"?>
<package format="2">
    <name>data_collection</name>
    <version>1.0.0</version>
    <description>A ROS package used to assist with data collection.</description>
    <maintainer email="williamwells2013@hotmail.com">William Wells</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>laser_geometry</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>message_filters</exec_depend>
    <exec_depend>laser_geometry</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>pcl_ros</exec_depend>

    <export>
        <build_type>catkin</build_type>
    </export>
</package>
